<resources>
    <string name="app_name">Quizzy</string>
    <string name="start_play">Start Play</string>
    <string name="normal_play">Normal Play</string>
    <string name="settings">Settings</string>
    <string name="quiz">Quiz</string>
    <string name="submit">Submit</string>
    <string name="Number_Questions">Number of Questions :</string>
    <string name="Select_Category">Select Category :</string>
    <string name="Select_Difficulty">Select Difficulty :</string>
    <string name="Select_Type">Select Type :</string>
    <string name="Sound">Enable sound/vibration : </string>
    <string name="Vibration">Enable vibration : </string>
    <string name="error">Something went wrong</string>
    <string name="select_item">select item</string>
    <string name="Scored">Scored : </string>
    <string name="Time">Time : </string>
    <string name="DifficultyType">Difficulty Type : </string>
    <string name="DifficultyTypes">Easy</string>
    <string name="TimeTaken">Time taken : </string>
    <string name="QuizName">Quiz : </string>
    <string name="TimeSpent">Time spent : </string>
    <string name="TotalQue">Total question : </string>
    <string name="refresh">Refresh</string>
    <string name="view">View Solution</string>
    <string name="attempt">Re-Attempt</string>
    <string name="start_quiz">Start quiz</string>
    <string name="splashLogo">Splash logo</string>
    <string name="displayTime">20:00 min</string>
    <string name="totalQue">20</string>
    <string name="nointernet">No Internet</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>