<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".features.settings.ui.SettingsFragment">

            <RelativeLayout
                android:id="@+id/rlMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_20dp"
                    android:layout_weight="1"
                    android:gravity="center|top|start"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_10dp"
                        android:text="@string/Number_Questions"
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10dp"
                        app:cardCornerRadius="@dimen/dimen_10dp"
                        app:cardElevation="@dimen/dimen_10dp">

                        <Spinner
                            android:id="@+id/spnNumberQuestions"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_50dp"
                            android:padding="@dimen/dimen_10dp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_10dp"
                        android:text="@string/Select_Category"
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10dp"
                        app:cardCornerRadius="@dimen/dimen_10dp"
                        app:cardElevation="@dimen/dimen_10dp">

                        <Spinner
                            android:id="@+id/spnCategory"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_50dp"
                            android:padding="@dimen/dimen_10dp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_10dp"
                        android:text="@string/Select_Difficulty"
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10dp"
                        app:cardCornerRadius="@dimen/dimen_10dp"
                        app:cardElevation="@dimen/dimen_10dp">

                        <Spinner
                            android:id="@+id/spnDifficulty"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_50dp"
                            android:padding="@dimen/dimen_10dp"
                            android:prompt="@string/select_item" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_10dp"
                        android:text="@string/Select_Type"
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10dp"
                        app:cardCornerRadius="@dimen/dimen_10dp"
                        app:cardElevation="@dimen/dimen_10dp">

                        <Spinner
                            android:id="@+id/spnType"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_50dp"
                            android:padding="@dimen/dimen_10dp" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/dimen_10dp"
                            android:text="@string/Sound"
                            android:textColor="@color/dark_yellow"
                            android:textSize="@dimen/dimen_16sp"
                            android:textStyle="bold" />


                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchSound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:thumbTint="@color/switch_thumb_selector"
                            app:trackTint="@color/switch_track_selector" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/dimen_10dp"
                            android:text="@string/Vibration"
                            android:textColor="@color/dark_yellow"
                            android:textSize="@dimen/dimen_16sp"
                            android:textStyle="bold" />


                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchVibration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:thumbTint="@color/switch_thumb_selector"
                            app:trackTint="@color/switch_track_selector" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen_20dp"
                        android:background="@drawable/button_background"
                        android:padding="@dimen/dimen_10dp"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/yellow"
                    android:progressTint="@color/yellow" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imgNoInternet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/nointernet"
                android:padding="@dimen/dimen_30dp"
                android:src="@drawable/nointernet"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>