<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data></data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_20sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCategoryType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textColor="@color/dark_yellow"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:textSize="@dimen/dimen_24sp" />

            <ImageView
                android:layout_width="@dimen/dimen_250sp"
                android:layout_height="@dimen/dimen_200sp"
                android:layout_gravity="center"
                android:padding="@dimen/dimen_20sp"
                android:contentDescription="@string/splashLogo"
                android:src="@drawable/splash_logo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:background="@color/dark_yellow"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:padding="@dimen/dimen_10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/QuizName"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtQuizType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/dimen_20sp" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lylTotalTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:baselineAligned="false"
                android:padding="@dimen/dimen_10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Time"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTotalTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/displayTime"
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/dimen_20sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lylTakenTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:baselineAligned="false"
                android:padding="@dimen/dimen_10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TimeTaken"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTakenTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/displayTime"
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/dimen_20sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:baselineAligned="false"
                android:padding="@dimen/dimen_10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Scored"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtScored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalQue"
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/dimen_20sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:baselineAligned="false"
                android:padding="@dimen/dimen_10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TotalQue"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTotalQue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalQue"
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/dimen_20sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/yellow_background"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/start_quiz"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</layout>