<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.example.quizzy.ui.home.HomeViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/startPlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_10dp"
                    app:cardCornerRadius="@dimen/dimen_10dp"
                    app:cardElevation="@dimen/dimen_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/start_gradient"
                        android:gravity="bottom|start"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_10dp">

                        <ImageView
                            android:layout_width="@dimen/dimen_70dp"
                            android:layout_height="@dimen/dimen_70dp"
                            android:contentDescription="@string/start_play"
                            android:src="@drawable/play" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_play"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dimen_24sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/dimen_90dp"
                android:layout_height="@dimen/dimen_90dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:contentDescription="@string/quiz"
                android:scaleType="fitXY"
                android:src="@drawable/quiz" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/normalPlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_10dp"
                    app:cardCornerRadius="@dimen/dimen_10dp"
                    app:cardElevation="@dimen/dimen_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/normal_gradient"
                        android:gravity="bottom|start"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_10dp">

                        <ImageView
                            android:layout_width="@dimen/dimen_70dp"
                            android:layout_height="@dimen/dimen_70dp"
                            android:contentDescription="@string/normal_play"
                            android:src="@drawable/play" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/normal_play"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dimen_24sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/dimen_90dp"
                android:layout_height="@dimen/dimen_90dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:contentDescription="@string/quiz"
                android:scaleType="fitXY"
                android:src="@drawable/quiz" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_10dp"
                    app:cardCornerRadius="@dimen/dimen_10dp"
                    app:cardElevation="@dimen/dimen_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/setting_gradient"
                        android:gravity="bottom|start"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_10dp">

                        <ImageView
                            android:layout_width="@dimen/dimen_70dp"
                            android:layout_height="@dimen/dimen_70dp"
                            android:contentDescription="@string/settings"
                            android:src="@drawable/settings" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dimen_24sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/dimen_90dp"
                android:layout_height="@dimen/dimen_90dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:contentDescription="@string/quiz"
                android:scaleType="fitXY"
                android:src="@drawable/quiz" />
        </RelativeLayout>

    </LinearLayout>
</layout>